--- a/resume_latex/sections/acadservices.tex
+++ b/resume_latex/sections/acadservices.tex
@@ -3,6 +3,10 @@
 \hspace*{0.4cm}  % Shift right by 0.4 cm
     \begin{minipage}{\dimexpr\textwidth-1cm\relax}  % Minipage with width of text minus 1 cm
         \begin{tabular*}{\dimexpr\textwidth-1cm\relax}{rl} % Two columns with stretched spacing
+            \CVTableEntry{Faculty}{Managerial Economics}{(PGDM-1)}
+            \CVTableEntry{}{Macroeconomics}{(PGDM-1)}
+            \CVTableEntry{}{Indian Economy}{(Elective)}
+            \CVTableEntry{}{Emerging Markets}{(Elective)}
             \CVTableEntry{Teaching Assistance}{Managerial Economics}{(PGP-1)}
             \CVTableEntry{}{Macroeconomics Economics}{(PGP-1)}
             \CVTableEntry{}{Industrial Organization}{(Elective, PGP-2)}
