--- a/resume_latex/sections/conference.tex
+++ b/resume_latex/sections/conference.tex
@@ -5,6 +5,14 @@
 %      {Work Presented}{When}
 %      {Occasion}{Country}
     \CVSubheading
+      {12th Conference on Asia and Pacific Economies (CAPE), 2024}{June 2024}
+      {Author and Presenter (Presented Online)}{Sozhou, China}
+      \CVItemListStart
+      \CVItem{Paper Title: : Does financial literacy alleviate poverty? – New insights from a multidimensional approach}
+      \CVItem{Authors: \textbf{Pawan A Kamble}, Atul Mehta}
+      \CVItemListEnd
+      
+    \CVSubheading
       {11th Conference on Asia and Pacific Economies (CAPE), 2024}{June 2024}
       {Author and  Presenter}{Sozhou, China}
       \CVItemListStart
