--- a/resume_latex/sections/education.tex
+++ b/resume_latex/sections/education.tex
@@ -5,7 +5,7 @@
 %      {Degree Achieved}{Years of Study}
 %      {Institution of Study}{Where it is located}
     \CVSubheading
-      {{Indian Institute of Management Shillong (IIM Shillong)}}{Aug. 2020 -- Present}
+      {{Indian Institute of Management Shillong (IIM Shillong)}}{Aug. 2020 -- Aug. 2024}
       {Doctor of Philosophy (PhD - Submitted)} {Shillong, India}
         \CVItemListStart
         \CVItem{Specialization: Economics and Public Policy}
