--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -19,11 +19,9 @@
       \CVSubheading
       {Working Articles}{}
       {Research Articles}{}
-      \CVItemListStart        
-        \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta} submitted to \textit{Bulletin of Economic Research}. \textbf{(Category: ABDC-B, Scopus-Q3)}}\\ \vspace{2pt}
-        \CVItem{Does financial literacy alleviate poverty? – New insights from a multidimensional approach  \textit{with Atul Mehta}}
-        \CVItem{Household financial resilience and impact of shocks: Evidence from India  \textit{with Atul Mehta}}\\ \vspace{2pt}
-        \CVItem{Household financial resilience and impact of idiosyncratic and covariate shocks  \textit{with Atul Mehta} }\\ \vspace{2pt}
-        \CVItem{Determinants household financial resilience: a systematic literature review using ADO-TCM Framework  \textit{with Atul Mehta and Neelam Rani} }\\ \vspace{2pt}
+      \CVItemListStart   
+        \CVItem{Can Financial Literacy Alleviate Poverty? Rethinking the Link through a Multidimensional Lens \textit{with Atul Mehta}}, Under Review in \textit{The B.E. Journal of Economic Analysis and Policy} \textbf{(Category: ABDC-A, Scopus-Q2)}\\ \vspace{2pt} 
+        \CVItem{Building Financial Resilience: A Systematic Literature Review and Future Research Agenda  \textit{with Atul Mehta and Neelam Rani}, Under Review in \textit{The Journal of Economic Surveys} \textbf{(Category: ABDC-A, Scopus-Q1)}}\\ \vspace{2pt}     
+        \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta} Under Review in \textit{Bulletin of Economic Research}. \textbf{(Category: ABDC-B, Scopus-Q3)}}\\ \vspace{2pt}
       \CVItemListEnd
   \CVSubHeadingListEnd
