--- a/resume_latex/sections/experience.tex
+++ b/resume_latex/sections/experience.tex
@@ -7,16 +7,25 @@
 %      \CVItemListStart
 %        \CVItem{Why it is important to this employer}
 %      \CVItemListEnd
-    \CVSubheading
+
+  \CVSubheading
+    {Birla Institute of Management Technology (BIMTECH)}{May 2025 -- \textit{Present}}
+    {Faculty/Academic Associate - Economics and International Business}{Greater Noida, India}
+    \CVItemListStart
+      \CVItem{Deliver core and elective courses: Managerial Economics, Macreconomics, Econometrics, Indian Economy, and Emerging Markets to PGDM/MBA students with a focus on managerial implications, applied learning and critical thinking.}
+      \CVItem{Engage in research on development economics, migration, and finaincal inclusion and resilience with an aim of contributing to high-impact publications and academic conferences.}
+      \CVItem{Contribute to administative roles including academic curriculum planning and strategic initiatives within the Economics and IB area.}
+    \CVItemListEnd
+  \CVSubheading
     {State Health Systems Resource Centre (SHSRC), Govt. of Meghalaya}{Dec. 2024 -- April 2025}
     {Senior Project Manager under UNICEF-IITB Project}{Shillong, India}
     \CVItemListStart
       \CVItem{Providing technical support for project management, research, impact evaluation, reporting, and reviewing health programs, as well as performance measurement in Meghalaya.}
       \CVItem{Conducting State Health Accounting in alignment with National Health Accounting standards to assess the status of healthcare financing in the state.}
       \CVItem{Identifying budget heads suitable for reallocation to Result-Based Financing initiatives for primary and secondary healthcare facilities in the state, aiming to enhance service delivery.}
-      \CVItem{Recruited District Health Associates to identify district-level healthcare gaps and delivered training on Human-Centric Design Interventions to develop innovative and sustainable solutions.}
       \CVItem{Develop comprehensive policy briefs for the state health administration and UNICEF, providing in-depth analysis and actionable recommendations to enhance health outcomes.}
     \CVItemListEnd
+    
     \CVSubheading
       {CSR Study Unit, IIT Bombay}{July 2018 -- Feb. 2019}
       {Research Associate}{Mumbai, India}
