--- a/resume_latex/sections/workshops.tex
+++ b/resume_latex/sections/workshops.tex
@@ -5,6 +5,18 @@
 %      {Work Presented}{When}
 %      {Occasion}{Country}
     \CVSubheading
+      {Knowledge Management for PhD Research using Zotero and Obsidian}
+      {May 2024}
+      {Resource Person}
+      {IIM Shillong}
+      \CVItemListStart
+      \CVItem{Conducted 2 hours hand‑on training workshop Zotero and Obsidian for Knowledge Management for Research}
+      \CVItem{Workshop Included: Managing research papers in Zotero $|$ Citations in Microsoft Word and LATEX}
+      \CVItem{Attendees: Working Professional PhD Scholars, Online:IIM Shillong}
+      \CVItem{Attendees: Research Scholars, IIM Shillong}
+      \CVItemListEnd
+
+    \CVSubheading
       {Knowledge Management for Research Scholars using Zotero and Obsidian}
       {May 2023}
       {Resource Person}
@@ -14,4 +26,5 @@
       \CVItem{Workshop Included: Managing research papers in Zotero $|$ Citations in Microsoft Word and LATEX $|$ Introduction to R‑Markdown}
       \CVItem{Attendees: Research Scholars, IIM Shillong}
       \CVItemListEnd
+      
     \CVSubHeadingListEnd
