--- a/resume_latex/sections/heading.tex
+++ b/resume_latex/sections/heading.tex
@@ -3,11 +3,11 @@
 \-\
 \end{minipage}
 
-\begin{minipage}[]{0.4\textwidth}
+\begin{minipage}[]{2\textwidth}
     \textbf{\huge \scshape{Pawan A Kamble \\}} \\
     \faPhone \hspace{3pt}{+91 7709021424} \\
     % \scshape sets small capital letters, remove if desired
-    \faEnvelope \hspace{3pt} \href{mailto:pawan.phd20@iimshillong.ac.in}{pawan.phd20@iimshillong.ac.in} \\
+    \faEnvelope \hspace{3pt}  \href{mailto:pawankb13@gmail.com}{pawankb13@gmail.com} \hspace{2em} \faEnvelope \hspace{3pt}  \href{mailto:pawan.phd20@iimshillong.ac.in}{pawan.phd20@iimshillong.ac.in}  \\
     \faGlobe \hspace{3pt} \href{https://pawankb13.github.io/}{pawankb13.github.io} \\
     % you should adjust you website
     \faLinkedin \hspace{3pt} \href{https://www.linkedin.com/in/pawankb13}{pawankb13}
