--- a/resume_latex/sections/references.tex
+++ b/resume_latex/sections/references.tex
@@ -8,7 +8,7 @@
     \CVSubheading
       {Prof. Atul Mehta}
       {}
-      {Assistant Professor $|$ Indian Institute of Management}
+      {Assistant Professor $|$ Indian Institute of Management Shillong}
       {Supervisor}
       \CVItemListStart
       \CVItemTwo{Economics and Public Policy Area}
@@ -18,7 +18,7 @@
     \CVSubheading
       {Prof. Neelam Rani}
       {}
-      {Associate Professor $|$ Indian Institute of Management}
+      {Associate Professor $|$ Indian Institute of Management Shillong}
       {Supervisor}
       \CVItemListStart
       \CVItemTwo{Finance and Control}
