--- a/resume_latex/sections/workshops.tex
+++ b/resume_latex/sections/workshops.tex
@@ -1,5 +1,5 @@
 % WORKSHOPS ---------------------------
-\section{Workshops}
+\section{Training \& Workshops}
   \CVSubHeadingListStart
 %    \CVSubheading % Example
 %      {Work Presented}{When}
