--- a/resume_latex/sections/acadservices.tex
+++ b/resume_latex/sections/acadservices.tex
@@ -8,10 +8,11 @@
             \CVTableEntry{}{Indian Economy}{(Elective)}
             \CVTableEntry{}{Emerging Markets}{(Elective)}
             \CVTableEntry{Teaching Assistance}{Managerial Economics}{(PGP-1)}
-            \CVTableEntry{}{Macroeconomics Economics}{(PGP-1)}
+            \CVTableEntry{}{Macroeconomics}{(PGP-1)}
             \CVTableEntry{}{Industrial Organization}{(Elective, PGP-2)}
             \CVTableEntry{}{Infrastructure and Private Sector}{(Elective, PGP-2)}
             \CVTableEntry{Journal Reviewer}{Empirical Economics}{(ABDC - A)}
+            \CVTableEntry{Journal Reviewer}{Journal of African Business}{(ABDC - C)}
             \CVTableEntry{}{Humanities and Social Sciences Communications}{(Scopus - Q1)}
             \CVTableEntry{}{Journal of Infrastructure, Policy and Development}{(Scopus - Q3)}
             \\% Left column bold, small text; right column normal small text
