--- a/resume_latex/sections/experience.tex
+++ b/resume_latex/sections/experience.tex
@@ -12,8 +12,8 @@
     {Birla Institute of Management Technology (BIMTECH)}{May 2025 -- \textit{Present}}
     {Faculty/Academic Associate - Economics and International Business}{Greater Noida, India}
     \CVItemListStart
-      \CVItem{Deliver core and elective courses: Managerial Economics, Macreconomics, Econometrics, Indian Economy, and Emerging Markets to PGDM/MBA students with a focus on managerial implications, applied learning and critical thinking.}
-      \CVItem{Engage in research on development economics, migration, and finaincal inclusion and resilience with an aim of contributing to high-impact publications and academic conferences.}
+      \CVItem{Delivering core and elective courses: Managerial Economics, Macroeconomics, Econometrics, Indian Economy, and Emerging Markets to PGDM/MBA students with a focus on managerial implications, applied learning and critical thinking.}
+      \CVItem{Engage in research on development economics, migration, and financial inclusion and resilience with an aim of contributing to high-impact publications and academic conferences.}
       \CVItem{Contribute to administative roles including academic curriculum planning and strategic initiatives within the Economics and IB area.}
     \CVItemListEnd
   \CVSubheading
