--- a/resume_latex/sections/acadservices.tex
+++ b/resume_latex/sections/acadservices.tex
@@ -12,9 +12,10 @@
             \CVTableEntry{}{Industrial Organization}{(Elective, PGP-2)}
             \CVTableEntry{}{Infrastructure and Private Sector}{(Elective, PGP-2)}
             \CVTableEntry{Journal Reviewer}{Empirical Economics}{(ABDC - A)}
-            \CVTableEntry{Journal Reviewer}{Journal of African Business}{(ABDC - C)}
+            \CVTableEntry{}{Journal of African Business}{(ABDC - C)}
             \CVTableEntry{}{Humanities and Social Sciences Communications}{(Scopus - Q1)}
             \CVTableEntry{}{Journal of Infrastructure, Policy and Development}{(Scopus - Q3)}
             \\% Left column bold, small text; right column normal small text
         \end{tabular*}
 \end{minipage}
+s
