--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -8,10 +8,15 @@
       {Published Articles}{}
       {Research Articles}{}
       \CVItemListStart
+        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2025). Building Financial Resilience: A Systematic Literature Review and Future Research Agenda, The Journal of Economic Surveys. DOI:\href{https://doi.org/10.1111/joes.70024}{\color{blue}10.1111/joes.70024}}\\ \vspace{2pt}  
+        \textbf{(Category: ABDC-A, ABS-2, Scopus-Q1)}\\ \vspace{2pt} 
+  
         \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2025). Measuring Multidimensional Financial Resilience: An Ex‑ante Approach, Social Indicators Research. 176, 533–567. DOI:\href{https://doi.org/10.1007/s11205-024-03476-8}{\color{blue}10.1007/s11205-024-03476-8}}\\ \vspace{2pt}
         \textbf{(Category: ABDC-A, Scopus-Q1)} 
+
         \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Financial Inclusion and Digital Financial Literacy: Do they Matter for Financial Well-being? Social Indicators Research.171, 777–807. DOI:\href{https://doi.org/10.1007/s11205-023-03264-w}{\color{blue}10.1007/s11205-023-03264-w}}\\ \vspace{2pt}
         \textbf{(Category: ABDC-A, Scopus-Q1)}
+
         \CVItem{M. P. Shah, \textbf{P. A. Kamble} and S. B. Agnihotri,Tackling child malnutrition: An innovative approach for training health workers using ICT a pilot study, 2016 IEEE Region 10 Humanitarian Technology Conference (R10-HTC), Agra, India, 2016, pp. 1- 6 DOI:\href{https://ieeexplore.ieee.org/abstract/document/7906811}{\space \color{blue}10.1109/R10-HTC.2016.7906811}} \\ \vspace{2pt}
         \textbf{(Category: Scopus)}    
       \CVItemListEnd
@@ -20,8 +25,7 @@
       {Working Articles}{}
       {Research Articles}{}
       \CVItemListStart   
-        \CVItem{Can Financial Literacy Alleviate Poverty? Rethinking the Link through a Multidimensional Lens \textit{with Atul Mehta}, Under Review in \textit{The B.E. Journal of Economic Analysis and Policy} \textbf{(Category: ABDC-A, Scopus-Q2)}}\\ \vspace{2pt} 
-        \CVItem{Building Financial Resilience: A Systematic Literature Review and Future Research Agenda  \textit{with Atul Mehta and Neelam Rani}, Under Review in \textit{The Journal of Economic Surveys} \textbf{(Category: ABDC-A, Scopus-Q1)}}\\ \vspace{2pt}     
+        \CVItem{Can Financial Literacy Alleviate Poverty? Rethinking the Link through a Multidimensional Lens \textit{with Atul Mehta}, Under Review in \textit{The B.E. Journal of Economic Analysis and Policy} \textbf{(Category: ABDC-A, Scopus-Q2)}}\\ \vspace{2pt}   
         \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta} Under Review in \textit{Bulletin of Economic Research}. \textbf{(Category: ABDC-B, Scopus-Q3)}}\\ \vspace{2pt}
       \CVItemListEnd
   \CVSubHeadingListEnd
