--- a/resume_latex/sections/acadservices.tex
+++ b/resume_latex/sections/acadservices.tex
@@ -5,17 +5,17 @@
         \begin{tabular*}{\dimexpr\textwidth-1cm\relax}{rl} % Two columns with stretched spacing
             \CVTableEntry{Faculty}{Managerial Economics}{(PGDM-1)}
             \CVTableEntry{}{Macroeconomics}{(PGDM-1)}
-            \CVTableEntry{}{Indian Economy}{(Elective)}
+            \CVTableEntry{}{Satate of Indian Economy \& Business}{(Elective)}
             \CVTableEntry{}{Emerging Markets}{(Elective)}
             \CVTableEntry{Teaching Assistance}{Managerial Economics}{(PGP-1)}
             \CVTableEntry{}{Macroeconomics}{(PGP-1)}
             \CVTableEntry{}{Industrial Organization}{(Elective, PGP-2)}
             \CVTableEntry{}{Infrastructure and Private Sector}{(Elective, PGP-2)}
             \CVTableEntry{Journal Reviewer}{Empirical Economics}{(ABDC - A)}
+            \CVTableEntry{}{Computers in Human Behavior Reports}{(ABDC - A)}
             \CVTableEntry{}{Journal of African Business}{(ABDC - C)}
             \CVTableEntry{}{Humanities and Social Sciences Communications}{(Scopus - Q1)}
             \CVTableEntry{}{Journal of Infrastructure, Policy and Development}{(Scopus - Q3)}
             \\% Left column bold, small text; right column normal small text
         \end{tabular*}
 \end{minipage}
-s
