--- a/resume_latex/sections/education.tex
+++ b/resume_latex/sections/education.tex
@@ -8,7 +8,7 @@
       {{Indian Institute of Management Shillong (IIM Shillong)}}{Aug. 2020 -- Dec. 2025}
       {Doctor of Philosophy (PhD)} {Shillong, India}
         \CVItemListStart
-        \CVItem{Specialization: Economics and Public Policy}
+        \CVItem{Specialization: Management (Economics and Public Policy)}
         \CVItem{Thesis Title: Multidimensional Financial Resilience: Conceptualization, Measurement and Impact of Shocks.}
         \CVItem{Relevant Course Work: Microeconomics, Macroeconomics, Econometrics, Industrial Organization, Indian Economy, Fintech and Financial Markets, Quantitative Research Methods.}
         %\CVItem{Overall CPI: 8.70/10}
