--- a/resume_latex/sections/heading.tex
+++ b/resume_latex/sections/heading.tex
@@ -4,7 +4,7 @@
 \end{minipage}
 
 \begin{minipage}[]{2\textwidth}
-    \textbf{\huge \scshape{Pawan A Kamble \\}} \\
+    \textbf{\huge \scshape{Dr. Pawan Ashok Kamble}\\}\\
     \faPhone \hspace{3pt}{+91 7709021424} \\
     % \scshape sets small capital letters, remove if desired
     \faEnvelope \hspace{3pt}  \href{mailto:pawankb13@gmail.com}{pawankb13@gmail.com} \hspace{2em} \faEnvelope \hspace{3pt}  \href{mailto:pawan.phd20@iimshillong.ac.in}{pawan.phd20@iimshillong.ac.in}  \\
