--- a/resume_latex/sections/workshops.tex
+++ b/resume_latex/sections/workshops.tex
@@ -12,8 +12,7 @@
       \CVItemListStart
       \CVItem{Conducted 2 hours hand‑on training workshop Zotero and Obsidian for Knowledge Management for Research}
       \CVItem{Workshop Included: Managing research papers in Zotero $|$ Citations in Microsoft Word and LATEX}
-      \CVItem{Attendees: Working Professional PhD Scholars, Online:IIM Shillong}
-      \CVItem{Attendees: Research Scholars, IIM Shillong}
+      \CVItem{Attendees: Working Professional PhD Scholars, Mode: Online}
       \CVItemListEnd
 
     \CVSubheading
