--- a/resume_latex/resume1.tex
+++ b/resume_latex/resume1.tex
@@ -120,6 +120,7 @@
 \input{sections/skills.tex}
 \input{sections/interest.tex}
 %\input{sections/miscellaneous.tex}
+\newpage
 \input{sections/references.tex}
 \vspace{3em}
 Last Updated on \today
