--- a/resume_latex/sections/heading.tex
+++ b/resume_latex/sections/heading.tex
@@ -5,10 +5,9 @@
 
 \begin{minipage}[]{2\textwidth}
     \textbf{\huge \scshape{Dr. Pawan Ashok Kamble}\\}\\
-    \faPhone \hspace{3pt}{+91 7709021424} \\
+    \faPhone \hspace{3pt}{+91 7709021424} \hspace{4.8em} 
     % \scshape sets small capital letters, remove if desired
-    \faEnvelope \hspace{3pt}  \href{mailto:pawankb13@gmail.com}{pawankb13@gmail.com} \hspace{2em} \faEnvelope \hspace{3pt}  \href{mailto:pawan.phd20@iimshillong.ac.in}{pawan.phd20@iimshillong.ac.in}  \\
-    \faGlobe \hspace{3pt} \href{https://pawankb13.github.io/}{pawankb13.github.io} \\
+    \faEnvelope \hspace{3pt}  \href{mailto:pawankb13@gmail.com}{pawankb13@gmail.com} \hspace{2em} \\ \faGlobe \hspace{3pt} \href{https://pawankb13.github.io/}{pawankb13.github.io} \hspace{2em} 
     % you should adjust you website
     \faLinkedin \hspace{3pt} \href{https://www.linkedin.com/in/pawankb13}{pawankb13}
 
