--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -25,7 +25,7 @@
       {Working Articles}{}
       {Research Articles}{}
       \CVItemListStart   
-        \CVItem{Can Financial Literacy Alleviate Poverty? Rethinking the Link through a Multidimensional Lens \textit{with Atul Mehta}, Under Review in \textit{The B.E. Journal of Economic Analysis and Policy} \textbf{(Category: ABDC-A, Scopus-Q2)}}\\ \vspace{2pt}   
-        \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta} Under Review in \textit{Bulletin of Economic Research}. \textbf{(Category: ABDC-B, Scopus-Q3)}}\\ \vspace{2pt}
+        \CVItem{Can Financial Literacy Alleviate Poverty? Rethinking the Link through a Multidimensional Lens \textit{with Atul Mehta}} 
+        \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta}}
       \CVItemListEnd
   \CVSubHeadingListEnd
